force-app/main/default/objects/ASF_Integration__c/ASF_Integration__c.object-meta.xml
<CustomObject>
    <label>ASF Integration</label>
    <nameField>
        <displayFormat>ASF_Int_{0000}</displayFormat>
        <label>Integration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASF Integrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>