force-app/main/default/objects/ASF_Integration__c/fields/Auto_Run_on_Load__c.field-meta.xml
<CustomField>
    <fullName>Auto_Run_on_Load__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Run on Load</label>
    <type>Checkbox</type>
</CustomField>