force-app/main/default/objects/ASF_Integration__c/fields/CAMS_Message_Code__c.field-meta.xml
<CustomField>
    <fullName>CAMS_Message_Code__c</fullName>
    <label>CAMS Message Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>