force-app/main/default/objects/ASF_Integration__c/fields/CAMS_Target_Code__c.field-meta.xml
<CustomField>
    <fullName>CAMS_Target_Code__c</fullName>
    <label>CAMS Target Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>