force-app/main/default/objects/ASF_Integration__c/fields/Case_Stage_Config__c.field-meta.xml
<CustomField>
    <fullName>Case_Stage_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Stage Config</label>
    <referenceTo>ASF_Case_Stage_Config__c</referenceTo>
    <relationshipLabel>ASF Integrations</relationshipLabel>
    <relationshipName>ASF_Integrations</relationshipName>
    <type>Lookup</type>
</CustomField>