force-app/main/default/objects/ASF_Integration__c/fields/Do_Not_Retry_Integration__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Retry_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Force Stop Integration Retries.</description>
    <label>Do Not Retry Integration</label>
    <type>Checkbox</type>
</CustomField>