force-app/main/default/objects/ASF_Integration__c/fields/Mandatory_At_Stage_Movement__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_At_Stage_Movement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mandatory At Stage Movement</label>
    <type>Checkbox</type>
</CustomField>