force-app/main/default/objects/ASF_Integration__c/fields/Run_Integration_From_LWC__c.field-meta.xml
<CustomField>
    <fullName>Run_Integration_From_LWC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field to be set to True, if expectation is to run the integration for Technical_Source__c = LWC.</description>
    <label>Run Integration From LWC</label>
    <type>Checkbox</type>
</CustomField>