force-app/main/default/objects/ASF_Integration__c/fields/STP_API_Identifier__c.field-meta.xml
<CustomField>
    <fullName>STP_API_Identifier__c</fullName>
    <description>This field is used to store identifier for STP API callouts.</description>
    <label>STP API Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>