force-app/main/default/objects/ASF_Integration__c/fields/STP_Config_External_Id__c.field-meta.xml
<CustomField>
    <fullName>STP_Config_External_Id__c</fullName>
    <description>This field is used to check if any child case needs to be created on closure of Case. Used in STP Flows</description>
    <label>STP Config External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>