force-app/main/default/objects/ASF_Integration__c/fields/STP_Processing_Class__c.field-meta.xml
<CustomField>
    <fullName>STP_Processing_Class__c</fullName>
    <label>STP Processing Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>