force-app/main/default/objects/ASF_Integration__c/fields/STP_Template__c.field-meta.xml
<CustomField>
    <fullName>STP_Template__c</fullName>
    <label>STP Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>