force-app/main/default/objects/ASF_Integration__c/fields/UI_Component__c.field-meta.xml
<CustomField>
    <fullName>UI_Component__c</fullName>
    <label>UI Component</label>
    <length>150</length>
    <type>Text</type>
</CustomField>