force-app/main/default/objects/ASF_Integration__c/fields/Visibility_Class__c.field-meta.xml
<CustomField>
    <fullName>Visibility_Class__c</fullName>
    <label>Visibility Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>