force-app/main/default/objects/ASF_Integration__c/fields/When_to_Appear__c.field-meta.xml
<CustomField>
    <fullName>When_to_Appear__c</fullName>
    <label>When to Appear</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stage Entry</fullName>
            </value>
            <value>
                <fullName>During Stage</fullName>
            </value>
            <value>
                <fullName>Stage Exit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>